crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_trailing_arrow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found end of input expected any, '#', '-', 'r', '"', '"true"', '"false"', '"null"', int, '[', '{', '"if"', '"for"', '"match"', identifier, or '('
  --> 3:1
  |
3 | 
  | ^
